[package]
name = "arcana-proc"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Arcana Engine proc-macro crate"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-easy = { workspace = true }
ahash = { workspace = true }
