[package]
name = "arcana-launcher-cli"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "CLI launcher for Arcana Engine"

[[bin]]
name = "arcn"
path = "src/main.rs"

[dependencies]
arcana-names = { path = "../../names" }
arcana-project = { path = "../../project" }
arcana-launcher = { path = ".." }
clap.workspace = true
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
