[package]
name = "arcana-launcher-gui"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Arcana Engine launcher"

[dependencies]
arcana = { path = "../../arcana", features = ["client"] }
# arcana-project = { path = "../../project" }
arcana-launcher = { path = ".." }
arcana-egui = { path = "../../plugins/egui" }
camino = { workspace = true }
dirs = { workspace = true }
egui = { workspace = true }
egui_dnd = { workspace = true }
egui-phosphor = { workspace = true }
egui_tracing = { workspace = true }
hashbrown = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true, features = ["serde"] }
