[package]
name = "arcana-launcher-gui"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "GUI launcher for Arcana Engine"

[[bin]]
name = "arcana"
path = "src/main.rs"

[dependencies]
arcana-launcher = { path = ".." }
camino.workspace = true
dirs.workspace = true
egui.workspace = true
egui_dnd.workspace = true
egui_file.workspace = true
egui-phosphor.workspace = true
egui_tracing.workspace = true
eframe.workspace = true
hashbrown.workspace = true
miette = { workspace = true, features = ["fancy"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
